Added BSP + RandomWalk generator.

--- a/ProcGen.dproj
+++ b/ProcGen.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>ProcGen.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -98,6 +98,7 @@
         <DCCReference Include="uBSP.pas"/>
         <DCCReference Include="uBSPRoom.pas"/>
         <DCCReference Include="uUtils.pas"/>
+        <DCCReference Include="uBSPRandomWalk.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
